// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > :props > :borderless 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select-input--borderless t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select > :props > :clearable 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select > :props > :creatable 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select > :props > :disabled 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-disabled t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          disabled=""
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select > :props > :labelInValue 1`] = `
<div
  class="t-select__wrap"
  labelinvalue="false"
>
  <div
    class="t-select-input t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select > :props > :loading 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <div
            class="t-loading--center t-size-s t-loading"
          >
            <svg
              class="t-loading__gradient t-icon-loading"
              height="1em"
              size="small"
              version="1.1"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <foreignobject
                height="12"
                width="12"
                x="0"
                y="0"
              >
                <div
                  class="t-loading__gradient-conic"
                />
              </foreignobject>
            </svg>
            <!---->
          </div>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select > :props > :multiple 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select-input--multiple t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-is-empty t-tag-input__with-suffix-icon"
    >
      <div
        class="t-input t-is-readonly t-input--prefix t-input--suffix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          
        </div>
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__input-pre"
        >
          请选择
        </span>
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select > :props > :placeholder 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="please select"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select > :props > :remote 1`] = `
<div
  class="t-select__wrap"
  remote="true"
>
  <div
    class="t-select-input t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select > :props > :reserveKeyword 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select > :props > :size 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select-input--empty t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-l t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select Option > :props > :disabled 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select Option > :props > :label 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select Option > :props > :value 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;

exports[`Select OptionGroup > :props > :value 1`] = `
<div
  class="t-select__wrap"
>
  <div
    class="t-select-input t-select"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--suffix"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
          unselectable="on"
        />
        <!---->
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    <!---->
    
    <!---->
  </div>
</div>
`;
